# cmark-writer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TRAITS_REORGANIZATION.md
.github/workflows/: ci.yml  deploy-docs.yml  mdbook.yml  release.yml
cmark-writer-macros/: Cargo.toml
cmark-writer-macros/src/: lib.rs
docs/: book.toml  index.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/api/: index.md  node.md  options.md  writer.md
docs/guide/: contributing.md  getting-started.md
docs/src/: SUMMARY.md  getting-started.md  introduction.md
docs/zh-CN/: index.md
examples/: better_custom_nodes.rs  new_interface_demo.rs  readme_derive_example.rs
src/: ast.rs  error.rs  format_traits.rs  lib.rs  options.rs  traits.rs  writer.rs
src/ast/: custom.rs  html.rs  mod.rs  node.rs
src/error/: mod.rs
src/gfm/: formatting.rs  html.rs  mod.rs
src/macros/: custom_error.rs  custom_node.rs  mod.rs
src/traits/: core.rs  formatting.rs  mod.rs  processing.rs  utils.rs
src/writer/: cmark.rs  common_mark.rs  context.rs  mod.rs  processors.rs
tests/: ast_test.rs  attribute_macros_test.rs  better_custom_nodes_test.rs  custom_html_options_test.rs  custom_node_match_test.rs  custom_node_test.rs  custom_nodes_suite.rs  error_test.rs  gfm_suite.rs  gfm_test.rs  html_impl_test.rs  html_options_test.rs  html_render_test.rs  html_suite.rs  integration_test.rs  issue_1818_paragraph_hard_break_test.rs  new_custom_node_test.rs  regression_suite.rs  setext_test.rs  unit.rs  unit_suite.rs  writer_test.rs
tests/ast/: html.rs  mod.rs  node.rs  tables.rs
tests/custom_nodes/: attribute_macros.rs  basic.rs  matchers.rs  mod.rs
tests/error/: error_types.rs  (+2 more)
(+70 files in other folders)
